[tool.poetry]
name = "advanced-python"
version = "0.1.0"
description = ""
authors = ["asvistunov <aleksandrsvistunov4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
streamlit = "^1.29.0"
plotly = "^5.18.0"
nbformat = "^5.9.2"
seaborn = "^0.13.0"
wordcloud = "^1.9.3"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
